--- a/kopplingsschema.html
+++ b/kopplingsschema.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="looks.css" />
-    <link rel="stylesheet" href="Background/BackgroundAnimation.css" />
+    <link rel="stylesheet" href="circuitImgHoverZoom.css" />
     <script type="text/javascript" src="scripts.js"></script>
     <script>
       window.onload = colorChangeOnLoad;
@@ -19,23 +19,15 @@
       <a href="kopplingsschema.html" id="hover-underline-animation"
         >KOPPLINGSSCHEMA</a
       >
-      <a href="kallkod.html" id="hover-underline-animation">KÄLLKOD</a>
+      <a href="kallkod.html" id="hover-underline-animation">KÃ„LLKOD</a>
     </div>
-    <div id="backgroundAnimation"></div>
-    <div id="text-container">
-      <h1>kopplingsschema</h1>
-      <p>
-        Skåda en apparat som tillåter spel av luffarschack som världen aldrig
-        tidigare upplevt. Med makten utav microcontrollern ATMega1284 har vi
-        lyckats designa en revolutionerande apparat med cutting edge teknologi.
-        Denna teknologi demonstreras genom moderna komponenter såsom den vackra
-        UIn utav 5050 RGB neopixlar, det ergonomiskt integrarade
-        kontrollsystemet i form av en 4x4 knappsats med stöd av key encoder
-        mm54c922 och en avancerad artificiell intelligens med minimax logik
-        kraftfull nog att erövra världen. Ta chansen och spela luffarschack som
-        aldrig förr.
-      </p>
+    <div class="img-zoom-container">
+      <img id="myimage" src="Background/Circuitry.jpg" />
+      <div id="myresult" class="img-zoom-result"></div>
     </div>
-    <div id="footer"></div>
+
+    <script>
+      imageZoom("myimage", "myresult");
+    </script>
   </body>
 </html>
