--- a/kallkod.html
+++ b/kallkod.html
@@ -2,7 +2,9 @@
   <head>
     <link rel="stylesheet" href="looks.css" />
     <link rel="stylesheet" href="Background/BackgroundAnimation.css" />
+    <link rel="stylesheet" href="Prism/prism.css" />
     <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="Prism/prism.js"></script>
     <script>
       window.onload = colorChangeOnLoad;
     </script>
@@ -21,21 +23,20 @@
       >
       <a href="kallkod.html" id="hover-underline-animation">KÄLLKOD</a>
     </div>
-    <div id="backgroundAnimation"></div>
-    <div id="text-container">
-      <h1>källkod</h1>
-      <p>
-        Skåda en apparat som tillåter spel av luffarschack som världen aldrig
-        tidigare upplevt. Med makten utav microcontrollern ATMega1284 har vi
-        lyckats designa en revolutionerande apparat med cutting edge teknologi.
-        Denna teknologi demonstreras genom moderna komponenter såsom den vackra
-        UIn utav 5050 RGB neopixlar, det ergonomiskt integrarade
-        kontrollsystemet i form av en 4x4 knappsats med stöd av key encoder
-        mm54c922 och en avancerad artificiell intelligens med minimax logik
-        kraftfull nog att erövra världen. Ta chansen och spela luffarschack som
-        aldrig förr.
-      </p>
+
+    <div id="code-container">
+      <pre id="code-display"></pre>
     </div>
-    <div id="footer"></div>
+    <div id="button-menu">
+      <button
+        id="file1-button"
+        class="file-button"
+        onclick="fileSelection('C-files/Board.c')"
+      >
+        File 1
+      </button>
+      <button id="file2-button" class="file-button">File 2</button>
+      <button id="file3-button" class="file-button">File 3</button>
+    </div>
   </body>
 </html>
