--- a/Home.html
+++ b/Home.html
@@ -24,7 +24,20 @@
     </div>
 
     <div id="image-display">
-      <img id="large-image" src="Background/BackImg1.jpg" alt="Image 1" />
+      <div id="imageAndText">
+        <img id="large-image" src="Background/BackImg1.jpg" alt="Image 1" />
+        <div id="text-container">
+          <h1>TRE I RAD</h1>
+          <p>
+            Hej och välkommen till hemsidan för vårt tre i rad projekt! Detta är
+            ett arbete som vi (fem stycken personer) har skapat tillsammans.
+            Under arbetets gång lärde vi oss mycket om hårdvara, C programmering
+            och webdesign. Vi förbättrade även våra förmågor att sammarbeta, och
+            vi hade även väldigt kul under tiden. Kika gärna runt på sidan för
+            att se lite av vad vi åstadkommit!
+          </p>
+        </div>
+      </div>
       <div id="thumbnail-grid">
         <img
           class="thumbnail-grid-item"
@@ -45,56 +58,48 @@
           onclick="changeLargeImage(this)"
         />
         <img
+          class="thumbnail-grid-item"
           src="Background/BackImg4.jpg"
           alt="Image 4"
           onclick="changeLargeImage(this)"
         />
         <img
+          class="thumbnail-grid-item"
           src="Background/BackImg5.jpg"
           alt="Image 5"
           onclick="changeLargeImage(this)"
         />
         <img
+          class="thumbnail-grid-item"
           src="Background/BackImg6.jpg"
           alt="Image 6"
           onclick="changeLargeImage(this)"
         />
         <img
+          class="thumbnail-grid-item"
           src="Background/BackImg7.jpg"
           alt="Image 7"
           onclick="changeLargeImage(this)"
         />
         <img
+          class="thumbnail-grid-item"
           src="Background/BackImg8.jpg"
           alt="Image 8"
           onclick="changeLargeImage(this)"
         />
         <img
+          class="thumbnail-grid-item"
           src="Background/BackImg9.jpg"
           alt="Image 9"
           onclick="changeLargeImage(this)"
         />
         <img
+          class="thumbnail-grid-item"
           src="Background/BackImg10.jpg"
           alt="Image 10"
           onclick="changeLargeImage(this)"
         />
       </div>
-    </div>
-
-    <div id="text-container">
-      <h1>LUFFAREN</h1>
-      <p>
-        Skåda en apparat som tillåter spel av luffarschack som världen aldrig
-        tidigare upplevt. Med makten utav microcontrollern ATMega1284 har vi
-        lyckats designa en revolutionerande apparat med cutting edge teknologi.
-        Denna teknologi demonstreras genom moderna komponenter såsom den vackra
-        UIn utav 5050 RGB neopixlar, det ergonomiskt integrarade
-        kontrollsystemet i form av en 4x4 knappsats med stöd av key encoder
-        mm54c922 och en avancerad artificiell intelligens med minimax logik
-        kraftfull nog att erövra världen. Ta chansen och spela luffarschack som
-        aldrig förr.
-      </p>
     </div>
   </body>
 </html>
