--- a/kopplingsschema.html
+++ b/kopplingsschema.html
@@ -19,7 +19,7 @@
       <a href="kopplingsschema.html" id="hover-underline-animation"
         >KOPPLINGSSCHEMA</a
       >
-      <a href="kallkod.html" id="hover-underline-animation">KÃ„LLKOD</a>
+      <a href="kallkod.html" id="hover-underline-animation">KÄLLKOD</a>
     </div>
     <div class="img-zoom-container">
       <img id="myimage" src="Background/Circuitry.jpg" />
