--- a/rapport.html
+++ b/rapport.html
@@ -21,21 +21,12 @@
       >
       <a href="kallkod.html" id="hover-underline-animation">KÄLLKOD</a>
     </div>
-    <div id="backgroundAnimation"></div>
-    <div id="text-container">
-      <h1>rapport</h1>
-      <p>
-        Skåda en apparat som tillåter spel av luffarschack som världen aldrig
-        tidigare upplevt. Med makten utav microcontrollern ATMega1284 har vi
-        lyckats designa en revolutionerande apparat med cutting edge teknologi.
-        Denna teknologi demonstreras genom moderna komponenter såsom den vackra
-        UIn utav 5050 RGB neopixlar, det ergonomiskt integrarade
-        kontrollsystemet i form av en 4x4 knappsats med stöd av key encoder
-        mm54c922 och en avancerad artificiell intelligens med minimax logik
-        kraftfull nog att erövra världen. Ta chansen och spela luffarschack som
-        aldrig förr.
-      </p>
-    </div>
-    <div id="footer"></div>
+
+    <embed
+      src="Rapport.pdf"
+      type="application/pdf"
+      width="100%"
+      height="94.5%"
+    />
   </body>
 </html>
